# mcp-workshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
common/: __init__.py  jwt.py  log.py  paths.py
docker/: compose.keycloak.yml  realm.json
docs/: agent_runbook.md  keycloak_setup.md  security_notes.md  vscode_setup.md
scripts/: __init__.py  demo_inputs.md  get_token.sh  smoke_test.py
servers/: 01_calculator_stdio.py  02_concepts_stdio.py  03_inspector_debug_stdio.py  04_vscode_stdio.py  05_agent_tools_stdio.py  06_security_vuln_stdio.py  07_security_hardened_stdio.py  08_auth_time_http.py  __init__.py
