[project]
name = "mcp-workshop"
version = "0.1.0"
description = "Workshop scaffold for MCP servers (FastMCP/FastAPI)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  # NOTE: Actual package names/versions may differ across MCP/FastMCP distributions.
  # Adjust as needed for your environment.
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "PyJWT>=2.8",
  "pydantic>=2",
  "httpx>=0.27",
  # FastMCP / MCP (TODO: pin once confirmed)
  "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
# uv will read dependencies from [project]

